--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.0-canary.110",
     "microcms-js-sdk": "^3.1.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
